# logextractor

./: .gitignore  README.md  pyproject.toml  run.bat
config/: broad-analysis.json  config.json  error-focused.json  example-config.json  log-level-focused.json  log-levels.json  message-patterns.json  noise-reduction.json  source-focused.json  warning-focused.json
src/logextractor/: __main__.py  cli.py  constants.py
src/logextractor/config/: keys.py  loader.py
src/logextractor/domain/: models.py
src/logextractor/extraction/: extractor.py
src/logextractor/filtering/: matcher.py
src/logextractor/parsing/: log_parser.py
src/logextractor/reporting/: writer.py
tests/: test_config_loader.py  test_log_parser.py  test_matcher.py
