[project]
name = "logextractor"
version = "0.1.0"
description = "A rule-based CLI tool for extracting relevant events and context from large application log files."
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
logextractor = "logextractor.cli:main"
